--- a/css/tei.css
+++ b/css/tei.css
@@ -1,16 +1,60 @@
 body {
   font-size: 12pt;
+  max-width: 600px;
+  margin:auto;
+  padding:10px
 }
 
 tei-body {
-  
+  max-width: 600px;
+  margin: auto;
+  padding: 10px;
+
 }
 
 tei-head {
-  display: block;
+  display: block; text-align: center; font-weight: bold; font-size: 150%;
+  padding:20px; margin-bottom:10px
 }
 
 tei-p {
-  display: block;
+  display: block; 
 }
 
+tei-div 
+  { padding: 10px; 
+    display: block;
+    background-color: rgb(193, 241, 241);
+    border:dotted; margin bottom:10px;
+    margin-bottom:10px}
+
+
+tei-div [type="manuscrito"]
+  {font-family: 'Courier New', Courier, monospace;
+  padding-left: 10px; padding-right: 10px; padding-bottom:10px}
+
+tei-div [type="impreso"]
+  {font-family:"arial"}
+
+
+tei-persName { font-variant:small-caps;
+}
+
+tei-foreign { font-weight:bold;
+}
+
+tei-abbr {display:none}
+
+tei-corr{color:rgb(216, 18, 18); font-weight: bold;}
+
+tei-del{color:rgb(154, 23, 180); text-decoration:line-through;font-weight: bold;}
+
+tei-add{color:rgb(12, 83, 131); font-weight:bold}
+
+tei-gap{background-color:black}
+
+tei-gap::before {content:" ";white-space: pre;}
+
+tei-lb::before{white-space: pre; content:"\A"}
+
+tei-signed{font-size:110%; color:rgb(219, 132, 168)}
