--- a/css/tei.css
+++ b/css/tei.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Permanent+Marker&display=swap');
+
 body {
   font-size: 12pt;
   max-width: 600px;
@@ -17,39 +20,43 @@ tei-head {
   padding:20px; margin-bottom:10px
 }
 
+tei-head tei-persname { font-variant:normal;
+}
+
 tei-p {
-  display: block; 
+  display: block; font-family: 'Cutive Mono', monospace; font-size:120%
 }
 
 tei-div 
-  { padding: 10px; 
+  { padding-left: 10px; padding-right: 10px;padding-bottom: 10px;
     display: block;
-    background-color: rgb(193, 241, 241);
-    border:dotted; margin bottom:10px;
+    background-color: rgb(241, 237, 241);
+    border:dotted;
     margin-bottom:10px}
 
 
 tei-div [type="manuscrito"]
-  {font-family: 'Courier New', Courier, monospace;
-  padding-left: 10px; padding-right: 10px; padding-bottom:10px}
+  {padding-left: 10px; padding-right: 10px; padding-bottom:10px; }
 
 tei-div [type="impreso"]
   {font-family:"arial"}
 
 
-tei-persName { font-variant:small-caps;
+tei-persname { font-variant:small-caps;
 }
 
 tei-foreign { font-weight:bold;
 }
 
+tei-closer{font-family: 'Cutive Mono', monospace;font-size:120%}
+
 tei-abbr {display:none}
 
-tei-corr{color:rgb(216, 18, 18); font-weight: bold;}
+tei-corr{color:rgb(153, 13, 196); font-weight: bold; text-decoration:overline }
 
-tei-del{color:rgb(154, 23, 180); text-decoration:line-through;font-weight: bold;}
+tei-del{color:rgb(146, 7, 7); text-decoration:line-through;; font-size:110%}
 
-tei-add{color:rgb(12, 83, 131); font-weight:bold}
+tei-add{color:rgb(141, 179, 39); font-weight:bold; font-size:110%}
 
 tei-gap{background-color:black}
 
@@ -57,4 +64,4 @@ tei-gap::before {content:" ";white-space: pre;}
 
 tei-lb::before{white-space: pre; content:"\A"}
 
-tei-signed{font-size:110%; color:rgb(219, 132, 168)}
+tei-signed{font-size:130%; color:rgb(226, 24, 108); text-decoration:underline; font-family: 'Permanent Marker', cursive;}
